tp1/step3/hpa-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-deployment
  labels:
    app: hpa
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa
  template:
    metadata:
      labels:
        app: hpa
    spec:
      containers:
      - name: hpa
        image: registry.gitlab.com/takima-school/images/hpa:latest
        ports:
        - containerPort: 80 
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      imagePullSecrets:
        - name: takima-school-registry
