tp1/step3/test-service.yml

apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  selector:
    app: test 
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
