tp1/step3/test-ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: test-ingress
 annotations:
  cert-manager.io/cluster-issuer: letsencrypt-staging
  kubernetes.io/tls-acme: 'true'
spec:
 ingressClassName: nginx
 rules:
 - host: test.loic-perrin.cpe.takima.school 
   http:
     paths:
     - backend:
         service:
           name: test-service
           port:
             number: 80
       path: /
       pathType: Prefix
 tls:
 - hosts:
   - unicorn.loic-perrin.cpe.takima.school
   secretName: test-tls
